--- a/modal_style.css
+++ b/modal_style.css
@@ -136,12 +136,30 @@
     margin-top: 5%;
 }
 
+/* Every user input line */
 .input-str {
     font-size: 20px;
     font-family: Arial;
+    min-width: 90%;
+    display: inline-block;
+    margin-top: 2%;
+    width: 60%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
+/* Modal for showing info about algorithm fix */
 #modal-alg-info-content {
     max-width: 42%;
     min-width: 42%;
+}
+
+/* Modal for adding container fix */
+#add-container-modal-content {
+    max-width: 42%;
+    min-width: 42%;
+}
+
+#conf {
+    margin-top: 5%;
 }
