Fixed context menu size for student mode

--- a/context_menu.css
+++ b/context_menu.css
@@ -15,6 +15,10 @@
     animation-duration: 0.6s;
 }
 
+#my-menu {
+    height: 23.33px;
+}
+
 /* Display context menu */
 .context-menu--active {
     display: block;
