--- a/scene_buttons.css
+++ b/scene_buttons.css
@@ -2,11 +2,12 @@
 #btn-prev-scene {
     max-width: fit-content;
     max-height: 10%;
-    display: inline-block;
     position: absolute;
     bottom: 0;
-    right: 0;
     left: 0;
+    right: inherit;
+    display: inline-block;
+    white-space : normal;
 }
 
 /* Button to return to previous scene */
