--- a/scene_buttons.css
+++ b/scene_buttons.css
@@ -1,5 +1,7 @@
 /* Button to switch to next scene */
 #btn-prev-scene {
+    font-family: 'Roboto', sans-serif;
+    font-size: 17px;
     max-width: fit-content;
     max-height: 10%;
     position: absolute;
@@ -8,16 +10,30 @@
     right: inherit;
     display: inline-block;
     white-space : normal;
+    background-color: white;
+    border-radius: 5px;
+    border: solid rgb(130, 130, 165);
+    -webkit-box-shadow: 0px 6px 0px rgb(130, 130, 165);
+    -moz-box-shadow: 0px 6px 0px rgb(130, 130, 165);
+    box-shadow: 0px 6px 0px rgb(130, 130, 165);
 }
 
 /* Button to return to previous scene */
 #btn-next-scene {
+    font-family: 'Roboto', sans-serif;
+    font-size: 17px;
     max-width: fit-content;
     max-height: 10%;
     display: inline-block;
     position: absolute;
     bottom: 0;
     right: 0;
+    background-color: white;
+    border-radius: 5px;
+    border: solid rgb(130, 130, 165);
+    -webkit-box-shadow: 0px 6px 0px rgb(130, 130, 165);
+    -moz-box-shadow: 0px 6px 0px rgb(130, 130, 165);
+    box-shadow: 0px 6px 0px rgb(130, 130, 165);
 }
 
 .timing {
