Finally fixed all the fonts to Roboto

--- a/menu_style.css
+++ b/menu_style.css
@@ -35,6 +35,7 @@
     width: 94%;
     height: auto;
     border-radius: 5px;
+    font-family: 'Roboto', sans-serif;
 }
 
 /* Menu list item div */
