--- a/footer_style.css
+++ b/footer_style.css
@@ -131,6 +131,27 @@
   float: center;
 }
 
+/*Button for student mode to watch all scenes with timings*/
+#watch-scenes {
+  font-family: 'Roboto', sans-serif;
+  font-size: 17px;
+  float: left;
+  margin-top: 0px;
+  outline: none;
+  padding-left: 0.77%;
+  padding-right: 0.77%;
+  padding-top: 0.7%;
+  padding-bottom: 0.7%;
+  max-width: 17.3%;
+  min-width: 17.3%;
+  background-color: white;
+  border-radius: 5px;
+  border: solid rgb(130, 130, 165);
+  -webkit-box-shadow: 0px 6px 0px rgb(130, 130, 165);
+  -moz-box-shadow: 0px 6px 0px rgb(130, 130, 165);
+  box-shadow: 0px 6px 0px rgb(130, 130, 165);
+}
+
 /* Button to exit operator mode */
 #op_button {
   font-family: 'Roboto', sans-serif;
