Made prev and next scene buttons inactive when inaccessible

--- a/footer_style.css
+++ b/footer_style.css
@@ -53,70 +53,6 @@
       color: #333;
 }
 
-/* Buttons 1, 2, 5 on hover */
-.btn1:hover,
-.btn5:hover,
-.btn2:hover{
-  color: rgb(75, 75, 75);
-}
-
-/* Buttons 3, 4 on hover */
-.btn3:hover,
-.btn4:hover,
-.btn-ref:hover {
-  color: rgb(75, 75, 75);
-}
-
-/* Button before */
-.btn::before{
-  content: "";
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 0%;
-  background: rgb(245, 245, 255);
-  z-index: -1;
-  transition: 0.8s;
-}
-
-/* Buttons 1, 3, 5 before */
-.btn1::before,
-.btn5::before,
-.btn3::before{
-  top: 0;
-  border-radius: 0 0 50% 50%;
-}
-
-/* Buttons 2, 4, ref before */
-.btn2::before,
-.btn4::before,
-.btn-ref::before {
-  bottom: 0;
-  border-radius: 50% 50% 0 0;
-  color: #333;
-}
-
-/* Buttons 3, 4, ref before */
-.btn3::before,
-.btn4::before,
-.btn-ref {
-  height: 180%;
-}
-
-/* Buttons 1, 2, 5 before */
-.btn1:hover::before,
-.btn5:hover::before,
-.btn2:hover::before {
-  height: 180%;
-}
-
-/* Buttons 3, 4, on hover before */
-.btn3:hover::before,
-.btn4:hover::before
-.btn-ref:hover::before{
-  height: 0%;
-}
-
 /* Button to reset scene in operator mode*/
 #no-alg {
   margin-top: 0px;
@@ -173,6 +109,7 @@
   box-shadow: 0px 6px 0px rgb(130, 130, 165);
 }
 
+/* Buttons "Сбросить" in operator and student modes */
 #no-alg, #no-alg2 {
   font-family: 'Roboto', sans-serif;
   font-size: 17px;
@@ -190,6 +127,11 @@
   -webkit-box-shadow: 0px 6px 0px rgb(130, 130, 165);
   -moz-box-shadow: 0px 6px 0px rgb(130, 130, 165);
   box-shadow: 0px 6px 0px rgb(130, 130, 165);
+}
+
+.inactive {
+  color: red;
+  background-color: gray;
 }
 
 .small-scene {
