--- a/scene_buttons.css
+++ b/scene_buttons.css
@@ -36,6 +36,16 @@
     box-shadow: 0px 6px 0px rgb(130, 130, 165);
 }
 
+#btn-next-scene:active, #btn-prev-scene:active {
+    background-color:rgb(187, 187, 216);
+    transform: scale(1.03);
+}
+
+#btn-next-scene:disabled, #btn-prev-scene:disabled {
+    color: gray;
+    background-color: rgb(200, 200, 200);
+}
+
 .timing {
     background-color: white;
     color: black;
