--- a/context_menu.css
+++ b/context_menu.css
@@ -19,6 +19,10 @@
     height: 23.33px;
 }
 
+#scene-menu {
+    height: 46.66px;
+}
+
 /* Display context menu */
 .context-menu--active {
     display: block;
