--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
     overflow-x: auto;
     white-space: nowrap;
     overflow-y: hidden;
+    position: relative;
 }
 
 #student-mode {
@@ -165,4 +166,14 @@ body {
 .column {
     height: 100%;
     width: 15%;
+}
+
+/* Link to docs */
+#info-symbol {
+    position: absolute;
+    bottom: 0;
+    left: 0.5%;
+    color: white;
+    text-decoration: none;
+    font-size: larger;
 }
