--- a/style.css
+++ b/style.css
@@ -173,7 +173,11 @@ body {
     position: absolute;
     bottom: 0;
     left: 0.5%;
-    color: white;
-    text-decoration: none;
+    color: #333;
     font-size: larger;
+    cursor: pointer;
+}
+
+#info-symbol:active {
+    color: white;
 }
