--- a/style.css
+++ b/style.css
@@ -171,8 +171,8 @@ body {
 /* Link to docs */
 #info-symbol {
     position: absolute;
-    bottom: 0;
-    left: 0.5%;
+    top: 0.5%;
+    right: 0.5%;
     color: #333;
     font-size: larger;
     cursor: pointer;
